[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Scenes/PlatformerSheetSprite.tscn" type="PackedScene" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 40.0
height = 80.0

[sub_resource type="Animation" id=2]
resource_name = "crouch"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("PlatformerSheetSpriteTop:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 169 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlatformerSheetSpriteBottom:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 196 ]
}

[sub_resource type="Animation" id=3]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("PlatformerSheetSpriteTop:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 61 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlatformerSheetSpriteBottom:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 88 ]
}

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("PlatformerSheetSpriteTop:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 115 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlatformerSheetSpriteBottom:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 142 ]
}

[sub_resource type="Animation" id=5]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("PlatformerSheetSpriteTop:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlatformerSheetSpriteBottom:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 34 ]
}

[sub_resource type="Animation" id=6]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlatformerSheetSpriteTop:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 114, 168 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlatformerSheetSpriteBottom:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 141, 195 ]
}

[node name="Player" type="KinematicBody2D" groups=[
"Player",
"Corruptable",
]]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="PlatformerSheetSpriteTop" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -65 )
frame = 115

[node name="PlatformerSheetSpriteBottom" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 65 )
frame = 142

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 45 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CoyoteTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.15
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1
one_shot = true

[node name="JumpCooldownTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="." groups=[
"CorruptableAnimationPlayer",
]]
autoplay = "idle"
anims/crouch = SubResource( 2 )
anims/fall = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/jump = SubResource( 5 )
anims/walk = SubResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2, 2 )
limit_left = -2147483648
limit_top = -2147483648
limit_right = 2147483647
limit_bottom = 2147483647
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = true
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1
__meta__ = {
"_edit_lock_": true
}

[node name="FloorRayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 200 )
[connection signal="timeout" from="CoyoteTimer" to="." method="_on_CoyoteTimer_timeout"]
